--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
 		/>
+		<meta
+			name="description"
+			content="Jobored is the platform where you find your new opportunities"
+		/>
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
