--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 			name="description"
 			content="Jobored is the platform where you find your new opportunities"
 		/>
+		<meta name="robots" content="all" />
+
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
